Upgraded Android build

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">#9C27B0</item>
+        <!-- Details color -->
+        <item name="colorAccent">#9C27B0</item>
     </style>
 
 </resources>
