--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#9C27B0</item>
+        <item name="colorPrimaryDark">#7b1fa2</item>
         <!-- Details color -->
         <item name="colorAccent">#9C27B0</item>
     </style>
